# Omni_Wars

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  WarCheat.cpp  WarCore.cpp  WarSettings.cpp
app/src/main/kotlin/com/omni/wars/: WarCheat.kt  WarLobby.kt  WarMap.kt  WarSettings.kt  WarWeapon.kt
app/src/main/res/values/: colors.xml  themes.xml
